igt@gem_exec_fence* - GEM_BUG_ON(!list_empty(&node->link))
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7762/shard-kbl6/igt@runner@aborted.html
Aborting.
Previous test: gem_exec_fence (basic-wait-all)
Next test: kms_busy (basic-modeset-pipe-b)
Kernel badly tainted (0x2c0) (check dmesg for details):
(0x80) TAINT_DIE: Kernel has died - BUG/OOPS.
(0x200) TAINT_WARN: WARN_ON has happened.
<5>[ 56.045166] i915 0000:00:02.0: gem_exec_fence[2120] context reset due to GPU hang
<7>[ 56.045324] [drm:__i915_request_reset [i915]] context gem_exec_fence[2120]: guilty 4, banned
<7>[ 56.045474] [drm:__i915_request_reset [i915]] client gem_exec_fence[2120]: gained 4 ban score, now 10
<6>[ 56.048189] i915 0000:00:02.0: GPU HANG: ecode 9:4:a77ffefe, in gem_exec_fence [2120]
<6>[ 56.049995] i915 0000:00:02.0: GPU HANG: ecode 9:8:a77ffefe, in gem_exec_fence [2120]
<3>[ 56.055120] i915_sched_node_reinit:400 GEM_BUG_ON(!list_empty(&node->link))